# grounded-rag-evaluator

./: .env.example  .gitignore  AGENTS.md  BACKLOG.md  README.md  RESULTS.md  SPECS.md  pyproject.toml
data/docs/: usage-policy.md
data/docs/billing/: refund-policy.md
data/docs/security/: data-privacy-policy.md
data/docs/support/: account-management.md  faq.md  troubleshooting.md
data/eval/: questions.jsonl
docs/: PROJECT_PLAN.md
rag_eval/: evals.py
rag_eval/evals/experiments/: festive_minsky.csv
rag_eval/evals/logs/: rag_run_20260423_154432_9803_2026-04-23T15-44-32-987501.json  rag_run_20260423_154433_1991_2026-04-23T15-44-33-587960.json  rag_run_20260423_154433_4492_2026-04-23T15-44-33-276230.json  rag_run_20260423_155554_0969_2026-04-23T15-55-54-959310.json  rag_run_20260423_155555_6403_2026-04-23T15-55-55-669421.json  rag_run_20260423_155556_3355_2026-04-23T15-55-56-080585.json
scripts/: qa.py
src/: __init__.py
src/agent/: __init__.py  loop.py  tools.py
src/app/: __init__.py  main.py  streamlit_app.py
src/evals/: __init__.py  metrics.py  run_eval.py
src/generation/: __init__.py  grounded_answer.py  prompts.py
src/ingestion/: __init__.py  chunker.py  loader.py  writer.py
src/retrieval/: __init__.py  embedder.py  index.py
src/utils/: __init__.py  hashing.py  io.py
tests/: test_agent.py  test_contract.py  test_evals.py  test_generation.py  test_ingestion.py  test_retrieval.py
